--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     backend:
         build:
             context: ..
-            dockerfile: docker/Dockerfile-backend
+            dockerfile: docker/Dockerfile
         command: >
             gunicorn -b 0.0.0.0:5766
             --access-logfile -
