--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,4 +9,6 @@ WORKDIR /movie-review-plus-backend
 
 COPY backend/ /movie-review-plus-backend
 
+EXPOSE 8000
+
 CMD gunicorn -b 0.0.0.0:8000 app:app
