--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 services:
     - docker
 before_install:
-    - docker build . -f docker/Dockerfile -t igormcsouza/movie-review-plus:backend-test
+    - docker build . -t igormcsouza/movie-review-plus:backend-test
 script:
     - docker run igormcsouza/movie-review-plus:backend-test python -c "import classifier"
